Ajout des fichiers box-center.css, main.css, modal.css, player.css, popup.css, style.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Jouez au jeu des dés, un jeu de hasard pour deux joueurs en JavaScript. Lancez le dé, accumulez des points et personnalisez l'apparence avec les fichiers CSS.">
     <title>Évaluation JavaScript Studi</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
     </head>
 
     <body>
