modif sur la modal dans le fichier index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
         </div>
         
         <div class="modal">
+            <div class="modal-content">
+              <span id="winner"></span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+          </div>
         
         <script type="module" src="assets/js/script.js"></script>
         <script type="module" src="assets/js/models/popup.js"></script>
