--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jouez au jeu des dés, un jeu de hasard pour deux joueurs en JavaScript. Lancez le dé, accumulez des points et personnalisez l'apparence avec les fichiers CSS.">
+    <meta name="description" content="Jouez au jeu des dés, un jeu de hasard pour deux joueurs en JavaScript. Lancez le dé, accumulez des points et personnalisez l'apparence avec les fichiers CSS">
     <title>Évaluation JavaScript Studi</title>
     <link rel="stylesheet" href="/assets/css/main.css">
     </head>
