Ajout des icônes sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     </div>
                 </div>
                 <div class="box-center">
-                    <div class="newGame" id="newGame">Nouveau jeu</div>
+                    <div class="newGame" id="newGame"><i class="fa-solid fa-plus"></i> Nouveau jeu</div>
                     <div class="imgCenter"><img src="assets/img/dice1.png" width="60" alt="dé"></div>
-                    <div class="rollDice" id="rollDice">Lancer</div>
-                    <div class="hold" id="hold">Garder</div>
+                    <div class="rollDice" id="rollDice"><i class="fa-solid fa-arrow-rotate-right"></i> Lancer</div>
+                    <div class="hold" id="hold"><i class="fa-solid fa-arrow-up"></i> Garder</div>
                 </div>
                 <div class="player player2">
                     <div class="player-info">
